assets/css/style.css
/*======================================================================*/
/* GENERAL STYLING */
/*======================================================================*/
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    /* border: 1px solid red; */
}

body, html{
    height: 100vh;
    width: 100%;
    position: relative;
    font-family: monospace;
    color: black;
}

/* FONTS */
    /* font-family: 'Ubuntu', sans-serif; */
    /* font-family: 'Indie Flower', cursive; */

/* FONT SIZE */
.big-text {
    font-size: 5.5vw;
}

.small-text {
    font-size: 1.5vw;
}

/* SPACING */
.padding {
    padding: 10px;
}

.no-wrap {
    white-space: nowrap;
}

/*======================================================================*/
/* NAV */
/*======================================================================*/
nav {
    position: fixed;
    background: rgba(255, 255, 255, 0.8) !important;
    padding: 0 20px;
    z-index: 100;
    /* box-shadow: none; */
}

/* Text Color */
nav div ul li a,
nav div a {
    color: black !important;
}

/* Hover Color */
.nav-effect:hover {
    background: rgb(99, 194, 222);
}

/* Clicked Color */
.highlight {
    background: rgb(99, 194, 222);
}

/*======================================================================*/
/* LANDING PAGE */
/*======================================================================*/
.gorge {
    background-image: url("../images/night.jpg");
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100%; 
    width: 100%;
    display: flex;
    /* justify-content: center; */
    background-position: center;
}

#hello-container {
    /* display: flex; */
    align-items: center; 
    text-align: center;
    color: rgb(231, 245, 249);
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    line-height: 1;
}

/*======================================================================*/
/* SCROLLING CSS */
/*======================================================================*/
.scrolled {
    background: rgb(34, 34, 34) !important;
    /* border-style: solid;
    border-width: 0 0 2px 0;
    border-color: rgb(99, 194, 222); */
}
.scrolled-font {
    color: white !important;
}

/*======================================================================*/
/* ABOUT */
/*======================================================================*/
.trees {
    background-image: url("../images/trees.jpg");
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
    /* height: 93.5%; */
    width: 100%;
    display: flex;
    /* justify-content: center; */
    background-position: center;
    border-style: solid;
    border-width: 10px 0 10px 0;
    border-color: rgb(99, 194, 222);
    /* position: relative; */
}

/* Vertical Center */
#about-me-container {
    display: flex;
    justify-content: center;
    align-items: center; 
}

#about-me {
    max-height: 85%;
    background: rgb(231, 245, 249, .8);
    margin: 50px 0 50px 0;
    border-style: solid;
    border-width: 10px 0;
    border-color: rgb(99, 194, 222);
    border-radius: 15%;
    /* position: absolute; */
   

    /* margin: auto; */
}

.about-icons {
    background: rgba(255, 255, 255);
    height: 170px;
    width: 170px;
    padding-top: 10px;
    margin: 0 auto;
    color: #1F1F1F;
    border-style: solid;
    border-width: 10px 0;
    border-color: rgb(99, 194, 222);
    border-radius: 15%;
}

.about-icons:hover {
    -webkit-transform: scale(1.3);
    -ms-transform: scale(1.3);
    transform: scale(1.3);
}

#about-me div h2 {
    font-weight: bold;
}

#slashes {
    color: rgb(99, 194, 222);
}

#resume-button-color {
    background: rgb(99, 194, 222);
}

#resume-button {
    padding-top: 20px;
}


/*======================================================================*/
/* PROJECTS */
/*======================================================================*/
.bottombg {
    background-image: url("../images/dark.png");
    /* min-height: 150%; */
    width: 100%;
    /* position: relative; */

}

.project-section {
    /* min-height: 100%; */
    width: 100%;
    /* float: left; */
}

#projects {
    color: #E7F5F9;
    padding: 0 40px 40px 40px;
}

.projects-slashes {
    color: rgb(99, 194, 222);
}

#projects div h2 {
    margin: 0;
    padding-top: 40px;

}

/* .card-body {
    background: #E7F5F9 !important;
    color: black;
} */

.card {
    border-style: solid;
    border-width: 5px;
    border-color: rgb(99, 194, 222);
}

/* HOVER */
.card-reveal{
  color: #ffffff;
  background-color: rgba(0,0,0,0.7) !important;
}
div.card-reveal span.card-title{
  color: #ffffff !important;
}

.hover {
    background-color: rgba(0,0,0,0.7) !important;
}

.project-info {
    text-align: center;
}

/* Isotope */
/* .grid {
    margin: 0 !important;
    padding: 0 !important;
} */
.element-item {
    width: 33.33% !important;
}
/* .grid-sizer,
.element-item { width: 33.33%; } */

/*======================================================================*/
/* CONTACT */
/*======================================================================*/
.footer {
    width: 100%;
    /* min-height: 40%; */
    padding-top: 160px;
    background-color: rgb(99, 194, 222, .5) !important;
    border-top-style: solid;
    border-width: 10px 0 0 0;
    border-color: rgb(99, 194, 222);
    border-radius: 50% 50% 0 0;
    /* position: absolute;
    bottom: 0; */
    /* clear: left; */
    
}

.copyright {
    
    color: white;
    text-align: center;
    
    margin: 0 auto;
}

#contact {
    color: #1F1F1F;
}

.icon-size {
    width: 100px;
    height: 100px;
}

/* .icon-space {
    padding-right: 10px;
} */

/*======================================================================*/
/* MEDIA QUERIES */
/*======================================================================*/
/* Resizes Landing Background */
@media screen and (max-width: 1432px) {
    /* .gorge {
        background-image: url("../images/night.jpg");
        background-attachment: fixed;
        background-repeat: no-repeat;
        background-size: cover;
        margin: 0px;
        padding: 0px;
        max-width: 100%;
        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
        background-size: cover;
        background-position: 60% 40%;
    }

    .trees {
        background-image: url("../images/trees.jpg");
        background-position: center;
        background-attachment: fixed;
        background-repeat: no-repeat;
        background-size: cover;
        width: 100%;
        display: flex;
        justify-content: center;
        border-style: solid;
        border-width: 10px 0 10px 0;
        border-color: rgb(99, 194, 222);
    } */

}

/*==================*/
/* MATERIALIZE */
/*==================*/
/* LARGE */
@media screen and (max-width: 1200px) {
    
}
/* MEDIUM */
@media screen and (max-width: 992px) {
    .element-item {
        width: 50% !important;
    }
}
/* SMALL */
@media screen and (max-width: 600px) {
    .element-item {
        width: 100% !important;
    }
}


/* HIDE ABOUT ICONS */
@media screen and (max-width: 748px) {

    #hide-about-icons {
        display: none;
    }
    #resume-button {
        padding-top: 0;
    }

    .filters-button-group {
        text-align: center;
        padding: 10px;
        display: block !important;
    }

    .header {
        font-size: 20pt;
    }
}

/* Format Footer */
/* @media screen and (max-width: 992px) {
    .bottombg {
        min-height: 160%;
    }
    .footer {
        min-height: 30%;
    }
    
}

@media screen and (max-width: 600px) {
    .bottombg {
        min-height: 260%;
    }
    .footer {
        min-height: 10%;
    }
    
} */

/*==================*/
/* Scrollbar */
/*==================*/
/* width */
::-webkit-scrollbar {
    width: 7px;
}

/* Track */
::-webkit-scrollbar-track {
    background: rgb(34, 34, 34);
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: rgb(231, 245, 249, .8); 
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: rgb(99, 194, 222);
}

